assets/style/style.css
@import url('https://fonts.googleapis.com/css2?family=Imprima&family=Josefin+Sans:wght@700&family=Kanit:ital@1&display=swap');

* {
    margin: 0;
    padding: 0;
    border: none;
}

body {
    background: 
        url(../images/background.jpg)
        no-repeat
        fixed
        top center / auto 120%
        #8ab5ff; 
        min-height: 100vh;
    }

h1 {
    font-family: 'Josefin Sans', sans-serif;
    font-size: 40px;
    color: #131e27;
    margin: 5px 0;
}

h2, h3 {
    font-family: Kenit, sans-serif;
    color: #25394a;
}

p {
    font-family: Imprima, sans-serif;
    line-height: 1.3;
}


/* Header */

.header-background {
    background-color: rgba(37, 57, 74, .4);
    width: 100%;
    height: 20vh;
}

.header-flexbox {
    height: 100%;
    width: auto;
    margin: 0 auto;
    display: flex;
    justify-content: center;
    flex-flow: column;
}

.minecraft-logo {
    height: 20%;
    width: auto;
    margin: 0 auto;
}

.madminers-header {
    height: 60%;
    width: auto;
    margin: 0 auto;
    padding-top: 5px;
}

.main-area-box {
    display: flex;
    justify-content: center;
    margin-top: 15px;
}

/* Navigation Bar*/

.nav-box {
    width: 200px;
    height: fit-content;
    background-color: rgba(37, 57, 74, .4);
    margin-right: 10px;
    padding: 10px 5px 10px 0px;
    border: #3b6385 outset 2px;
    border-radius: 0 20px 0 0;
    display: flex;
    flex-flow: column nowrap;
}


.nav-button {
    background-color: transparent;
    display: flex;
    margin: 5px auto;
    text-decoration: none;
}

.nav-text {
    width: 130px;
    height: 25px;
    background-color: #25394a;
    color: #ffd2a2;
    padding-left: 10px;
    padding-top: 5px;
    margin-left: 5px;
    font-size: 110%;
    letter-spacing: 1px;
    border: solid #000 1px;
    border-radius: 0 8px 0 0;
}

#discord-link {
    text-align: center;
    margin-top: 5px;
    text-decoration: none;
    color: #ffd2a2;
    background: #25394a;
    padding: 15px;
    margin: 10px;
    border-radius: 8px;
    border: solid 1px #000;
}

#discord-link h2 {
    font-size: 115%;
    color: inherit;
}

#discord-logo {
    font-size: 300%;
}

.nav-text:hover, .button-active, #discord-link:hover {
    background-color: #d4e9ff;
    color: #25394a;
}

/* Main Article */

#article-box {
    width: 650px;
    height: auto;
    min-height: 90vh;
    background-color: rgba(212, 233, 255, .6);
    border: #3b6385 outset 2px;
    border-radius: 0 40px 0 0;
    padding-top: 20px;
}

#article-box > h1, #article-box > h2 {
    text-align: center;
}

#article-box > hr {
    border: solid 1px #131e27;
    margin: 15px 20px;
}

#values {
    margin: 15px 40px;
    display: inline-block;
}

#values > div {
    width: 45%;
    background-color: rgba(255, 255, 255, .4);
    padding: 10px 20px 20px;
    border-radius: 0 20px 0 0;
    margin-bottom: 15px;
}

.values-float-left {
    float: left;
}

#values h3 {
    margin: 7px 0
}

.values-imgs {
    width: 40%;
    height: auto;
    border-radius: 50%;
    border: #3b6385 3px outset;
    position: relative; 
    top: 20px;
}

.values-float-right {
    float: right;
}

/* Footer */

footer {
    height: 70px;
    background-color: rgba(37, 57, 74, .4);
    margin-top: 15px;
}

footer h3 {
    text-align: center;
    color: #fff;
    position: relative;
    top: 30%;
}

/* Media queries */

@media screen and (max-width: 950px) {
    .madminers-header {
        width: 60%;
        height: auto;
    }
    .minecraft-logo {
        width: 20%;
        height: auto;
    }
}

@media screen and (max-width: 850px) {
    .main-area-box {
        flex-flow: column nowrap;
        justify-content: center;
    }

    .nav-box {
        margin: 0 auto;
        width: 90vw;
    }

    .nav-text {
        width: 50vw;
    }

    #article-box {
        margin: 5% auto;
        width: 90vw;
    }

    #values {
        margin: 5%;
    }

    #values > div {
        width: 80%;
        height: auto;
        display: block;
        margin: 0 5%;
    }

    .values-imgs {
        width: 60%;
        margin: 15px 20%;
        position: relative;
        top: 0;
    }
}

@media screen and (max-width: 800px) {
    .madminers-header {
        width: 70%;
        height: auto;
    }

    .minecraft-logo {
        width: 25%;
        height: auto;
    }
}

@media screen and (max-width: 500px) {
    .header-background{
        height: 13vh;
    }
    .madminers-header {
        width: 80%;
        height: auto;
    }

    .minecraft-logo {
        width: 30%;
        height: auto;
    }

    body {
        background: #8ab5ff;
    }
}

@media screen and (max-height: 500px) { 
    .madminers-header {
        height: 20vh;
        width: auto;
    }
    .minecraft-logo {
        display: none;
    }
    body {
        background: #8ab5ff;
    }
}

